feat: (Sprint 19) реализовать экран с фильтрами; добавить тёмную тему.
