# TravelSchedule/Resources/yaml/openapi.yaml
@@ -4,7 +4,7 @@ info:
   description: API Яндекс.Расписаний
   version: 3.0.0
 servers:
-- url: https://api.rasp.yandex.net
+- url: https://api.rasp.yandex-net.ru
 tags:
 - name: Список ближайших станций
   description: Список ближайших станций
@@ -499,7 +499,7 @@ components:
                     format: date-time
                     description: Время окончания движения по нитке.
               duration:
-                type: integer
+                type: number
                 description: Длительность рейса в секундах.
               has_transfers:
                 type: boolean
@@ -526,8 +526,49 @@ components:
         tickets_info:
           $ref: '#/components/schemas/TicketsInfo'
         duration:
-          type: integer
+          type: number
           description: Длительность рейса в секундах
+        start_date:
+          type: string
+          format: date
+          description: Дата отправления рейса
+        has_transfers:
+          type: boolean
+          description: Признак наличия пересадок по маршруту
+        transfers:
+          type: array
+          items:
+            $ref: '#/components/schemas/Transfers'
+        details:
+          type: array
+          items:
+            type: object
+            properties:
+              thread:
+                $ref: '#/components/schemas/Thread'
+              duration:
+                type: number
+              start_date:
+                type: string
+                format: date
+    Transfers:
+      type: object
+      properties:
+        type:
+          type: string
+          description: Тип пункта пересадки
+        title:
+          type: string
+          description: Название города пересадки
+        short_title:
+          type: string
+          description: Краткое название города пересадки
+        popular_title:
+          type: string
+          description: Общепринятое название города пересадки
+        code:
+          type: string
+          description: Код города пересадки
     Pagination:
       type: object
       properties:
